# copycat

./: .env.example  .gitignore  README.md  pyproject.toml
copycat/: app.py
copycat/database/: db.py  message.py
copycat/types/: app_mention_event.py  message.py
message_scrapers/: get_messages_api.py  get_messages_soc.py
