[tool.poetry]
name = "copycat"
version = "0.0.0"
description = "Imitate anybody on Slack with GPT"
authors = ["TrialSpark, Inc."]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.18.0"
python-dotenv = "^1.0.0"
openai = "^0.27.6"
peewee = "^3.16.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
hupper = "^1.12"
yapf = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'copycat.app:start'

[tool.mypy]
files = "copycat/**/*.py"
ignore_missing_imports = true
